fix(renderers): Fix column header not centered vertically

--- a/src/features/virtualized-table/VirtualizedTable.scss
+++ b/src/features/virtualized-table/VirtualizedTable.scss
@@ -19,6 +19,7 @@
     }
 
     .ReactVirtualized__Table__sortableHeaderColumn {
+        display: flex;
         user-select: none;
 
         &:focus,
